patterns/circuit-breaker/backend.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: flask-backend
#   namespace: circuit-breaker-app
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: flask-backend
#   template:
#     metadata:
#       labels:
#         app: flask-backend
#     spec:
#       containers:
#         - name: flask-backend
#           image: povarovaa/circuit-breaker-backend:latest
#           ports:
#             - containerPort: 5000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: flask-backend
#   namespace: circuit-breaker-app
# spec:
#   ports:
#     - port: 80
#       targetPort: 5000
#   selector:
#     app: flask-backend

apiVersion: v1
kind: Service
metadata:
  name: flask-backend
  namespace: circuit-breaker-app
spec:
  selector:
    app: flask-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-backend
  namespace: circuit-breaker-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-backend
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: flask-backend
          image: povarovaa/circuit-breaker-backend
          ports:
            - containerPort: 5000
